bug fixes for config file read

--- a/resources/gwa.config.example
+++ b/resources/gwa.config.example
@@ -7,4 +7,4 @@ chr.output: /<path to chr files>/
 mdr.type: R
 mdr.K: 2
 mdr.max: 50
-mdr.r.dir: /<ouptut path for R files>/
+mdr.analysis.dir: /<ouptut path for R files>/
