adding property for running oarsub

--- a/resources/gwa.config.example
+++ b/resources/gwa.config.example
@@ -11,3 +11,4 @@ mdr.analysis.dir: /<ouptut path for R files>/
 
 # OAR Cluster
 oar.dir: /<output directory for oar.sh files>/
+oar.cmd: oarsub -n=mdrTEST --notify=mail:skillcoyne\@gmail.com
