adding oarsub command options

--- a/resources/gwa.config.example
+++ b/resources/gwa.config.example
@@ -11,4 +11,6 @@ mdr.analysis.dir: /<ouptut path for R files>/
 
 # OAR Cluster
 oar.dir: /<output directory for oar.sh files>/
-oar.cmd: oarsub -n=mdrTEST --notify=mail:skillcoyne\@gmail.com
+oar.core: 1
+oar.walltime: 1
+oar.notify: mail:skillcoyne\@gmail.com
